--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-  <input type="text" id="user-input">
+  <!-- <input type="text" id="user-input"> -->
+  <div id="app"></div>
+  <button>Click me</button>
+  <form>
+    <input type="text" placeholder="Course title" id="title">
+    <input type="text" placeholder="Course price" id="price">
+    <button type="submit">Save</button>
+  </form>
 </body>
 
 </html>
